--- a/styles/styles.css
+++ b/styles/styles.css
@@ -152,3 +152,14 @@ section {
   margin-left: 8rem;
   margin-right: 8rem;
 }
+
+#sbox {
+  float: left;
+}
+#sbox2 {
+  float:  left;
+  align-items: center;
+  position: sticky;
+  margin-top: 3rem;
+  margin-left: 2rem;
+}
