add one more transition

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,9 +103,11 @@ img {
   vertical-align: middle;
 }
 
-.link1:hover {
+a.link1:hover {
   background-color: rgb(166, 192, 251);
   font-family: monospace;
+  font-size: 25px;
+  transition: all 2s ease-in 2s;
 }
 
 a.link2:hover {
